--- a/index.html
+++ b/index.html
@@ -7,23 +7,8 @@
     <title>Trash Checker</title>
     <style>
       body {
-        background: orange;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-attachment: fixed;
+        background: lightskyblue;
       }
-
-      body:before {
-        content: '';
-        position: absolute;
-        background-color: rgba(0, 0, 0, 0.65);
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        z-index: -1;
-      }
-
       a {
         text-decoration: none;
       }
@@ -34,15 +19,22 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
+      .container {
+        display: flex;
+        justify-content: center;
+      }
       .search h1 {
-        color: #fff;
+        color: #0f416f;
+        /* text-shadow: 0 0 5px rgba(0, 0, 0, 0.6); */
         text-align: center;
         font-weight: normal;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
         font-size: 36px;
+        line-height: 1.5;
       }
       .search input[type='text'] {
-        width: 300px;
+        font-size: 18px;
+        width: 400px;
         padding: 20px;
         border: none;
         margin-right: -6px;
@@ -51,30 +43,39 @@
         padding-left: 40px;
         box-sizing: border-box;
       }
-      .search input[type='submit'] {
-        width: 100px;
+      .search button[type='submit'] {
+        width: 150px;
         padding: 20px;
         border: none;
         border-radius: 0 40px 40px 0;
         cursor: pointer;
-        background-color: orange;
+        background-color: dodgerblue;
         color: #fff;
         outline: none;
+        font-size: 18px;
       }
-      .search input[type='submit']:hover {
-        background-color: darkgoldenrod;
+      .search button[type='submit']:hover {
+        background-color: royalblue;
       }
       .search input[type='text']::placeholder {
         font-size: 20px;
+        color: lightgray;
+      }
+      .search input[type='text']:focus::placeholder {
+        color: transparent;
       }
     </style>
   </head>
   <body>
     <form action="/result" method="GET" class="search">
-      <h1>음식물쓰레기가 맞는지 궁금하신가요?</h1>
-      <h1>아래 검색창에서 확인해보세요!</h1>
-      <input type="text" placeholder="(예)달걀껍데기" name="foodname" />
-      <input type="submit" value="찾아보기" />
+      <h1>
+        음식물쓰레기가 맞는지 궁금하신가요?<br />
+        아래 검색창에서 확인해보세요!
+      </h1>
+      <div class="container">
+        <input type="text" placeholder="(예) 달걀껍데기" name="foodname" />
+        <button type="submit">찾아보기</button>
+      </div>
     </form>
   </body>
 </html>
